--- a/pageinicial.css
+++ b/pageinicial.css
@@ -36,3 +36,20 @@ body{
     padding: 10px;
     border-radius: 10px;
 }
+
+.footer{
+    align-items: baseline;
+    background-color: var(--color-white);
+}
+
+.copyright{
+    width: 100%;
+    height: 20px;
+    background: var(--color-white);
+    font-size: small;
+    color: gray;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+}
