--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+body{
+    font-family:Arial, Helvetica, sans-serif
+}
+
+.container{
+    background-image: url(https://static.vecteezy.com/ti/fotos-gratis/p2/4519287-fundo-gradiente-roxo-e-azul-gratis-foto.jpg);
+    background-size: cover;
+    height: 700px;
+    padding: 20px;
+}
+.container h2{
+    padding-top: 10px;
+}
+
+.container h4{
+    padding-bottom: 10px;
+}
+
+.retangulo{
+    width: 300px;
+	height:max-content;
+	background-color: rgb(156, 205, 245);
+    margin: auto;
+    
+}
+
 h1{
     text-align: center;
     color: green;
