melhorias no desing

--- a/stylecadastro.css
+++ b/stylecadastro.css
@@ -1,3 +1,68 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
 h1{
     text-align: center;
+}
+
+.textos{
+    font-size: medium;
+}
+
+.caixa{
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+
+}
+
+.caixacpf{
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+    width: 110px;
+}
+
+.caixafone{
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+    width: 110px;
+    
+}
+
+.caixamail{
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+    width: 250px;
+    text-align: center;
+}
+
+.container{
+    background-image: url(https://static.vecteezy.com/ti/fotos-gratis/p2/4519287-fundo-gradiente-roxo-e-azul-gratis-foto.jpg);
+    background-size: cover;
+    height: 885px;
+    padding: 20px;
+}
+
+.textos{
+    background-color: white;
+}
+
+.botao1{
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+    width: 100px;
+}
+
+.titulo{
+    color: green;
+    font-size: 35px;
+}
+
+fieldset i{
+    font-size: 20px;
+    cursor: pointer;
+
+    position: absolute;
+    left: 20%;
 }
