--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,26 @@ h4{
 .caixa{
     border-radius: 10px;
     box-shadow: 1px 1px 10px black;
+
 }
 
 .botao1{
     border-radius: 10px;
     box-shadow: 1px 1px 10px black;
-    width: 100px;
+    width: 110px;
     align-content: center;
+}
+
+.aviso{
+    color: white;
+    text-align: center;
+}
+
+div i{
+    font-size: 20px;
+    cursor: pointer;
+
+    position: absolute;
+    left: 56%;
+    bottom: 595px;
 }
