--- a/stylecadastro.css
+++ b/stylecadastro.css
@@ -1,3 +1,9 @@
+body, html {
+    height: 90vh;  
+    margin: 0; 
+    padding: 0; 
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -24,27 +30,62 @@ h1{
     text-align: center;
 }
 
-.container{
-    background-image: url(https://static.vecteezy.com/ti/fotos-gratis/p2/4519287-fundo-gradiente-roxo-e-azul-gratis-foto.jpg);
-    background-size: cover;
-    height: 885px;
-    padding: 20px;
+
+
+.bg-gradiente-verde {
+background: linear-gradient(to right, #66d666, #02ad02); 
+height: min-content;
+     
+}
+
+.imagem-canto-superior-esquerdo {
+    position: absolute;
+    top: 10px; 
+    left: 10px;   
+    width: 300px; 
+    height: auto; 
 }
 
 .textos{
-    background-color: white;
-    padding: 0 2%;
+    width: 250px;
+    background-color: rgb(231, 227, 125);
+    margin: auto;
+    position: relative;
+    top: -40px; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    cursor: pointer;
+    
 }
 
 .botao1{
     border-radius: 10px;
     box-shadow: 1px 1px 10px black;
     width: 100px;
+    position: relative;
+    top: -50px;
+    font-size: 15px;
+    padding: 4px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+        
+}
+
+.botao1:hover {
+    background-color: #c4c6c4;
 }
 
 .titulo{
-    color: green;
-    font-size: 35px;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #090a09; /* Cor do texto */
+    text-shadow: 1px 1px 2px rgba(249, 247, 247, 0.5), 0 0 5px rgba(76, 175, 80, 0.5);
+    /* font-size: 35px; */
 }
 
 .caixacidade{
