--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,32 @@
+body, html {
+    height: 100vh; /* Define a altura do body e html como 100% da altura da viewport */
+    margin: 0; /* Remove margens padrão para evitar espaços em branco */
+    padding: 0; /* Remove padding padrão para evitar espaços em branco */
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
-.container{
+.bg-gradiente-verde {
+    background: linear-gradient(to right, #66d666, #02ad02); /* Gradiente do verde claro ao verde escuro */
+}
+
+.imagem-canto-superior-esquerdo {
+    position: absolute;
+    top: 10px; 
+    left: 10px;   
+    width: 300px; 
+    height: auto; 
+}
+
+/* .container{
     background-image: url(https://static.vecteezy.com/ti/fotos-gratis/p2/4519287-fundo-gradiente-roxo-e-azul-gratis-foto.jpg);
     background-size: cover;
     height: 885px;
     padding: 20px;
-}
+} */
 .container h2{
     padding-top: 10px;
 }
@@ -17,13 +35,20 @@ body{
     padding-bottom: 10px;
 }
 
-.retangulo{
-    width: 300px;
-	height:max-content;
-	background-color: rgb(156, 205, 245);
+.retanguloSolido {
+    width: 350px;
+    height:auto;
+    background-color: rgb(231, 227, 125);
     margin: auto;
-    
+    border: 2px solid black; 
+    border-radius: 10px; 
+    padding: 20px; 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
 }
+    
 
 h1{
     text-align: center;
@@ -43,10 +68,19 @@ h4{
     text-align: center;
 }
 
-.caixa{
+.caixa1 {
     border-radius: 10px;
     box-shadow: 1px 1px 10px black;
+    width: 100%; 
+    padding: 4px; 
+    
+}
 
+.caixa2 {
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black;
+    width: 100%; /* Ajusta a largura da caixa para preencher o espaço disponível */
+    padding: 4px; /* Espaçamento interno para o texto dentro da caixa */
 }
 
 .botao1{
@@ -54,11 +88,19 @@ h4{
     box-shadow: 1px 1px 10px black;
     width: 110px;
     align-content: center;
+    position: relative;
+    top: -40px;
+}
+    
+.botao1:hover {
+        background-color: #c4c6c4;
+
 }
 
 .aviso{
     color: red;
     text-align: center;
+    font-size: 15px;
 }
 
 div i{
@@ -71,6 +113,7 @@ div i{
 }
 
 .titulo{
-    color: green;
+    color: #090a09; 
+    text-shadow: 1px 1px 2px rgba(249, 247, 247, 0.5), 0 0 5px rgba(76, 175, 80, 0.5);
     font-size: 35px;
 }
